@@ -1,3 +1,6 @@
+2025-05-19 12:58
+- Added link to Konters' resources calculator
+
 2025-05-16 08:14
 - Added Squadron boost to income and experience results. Slight differences between simulator and in game log are due to rounding errors
 
